# main.go
@@ -26,6 +26,7 @@ func main() {
 	{
 		api.GET("/diaries", diaryController.FindAll)
 		api.POST("/diaries", diaryController.Create)
+		api.PUT("/diaries/:user_id/:date", diaryController.Update)
 		api.GET("/analyze-diaries", diaryAnalysisController.AnalyzeAllDiariesHandler)
 	}
 
